# gaze-mouse

./: .gitignore  README.md  config.example.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
src/gaze_mouse/: __init__.py  __main__.py  config.py  features.py  gaze_filter.py
src/gaze_mouse/calibration/: __init__.py  dataset.py
src/gaze_mouse/training/: __init__.py  cnn.py  device.py  metrics.py  mlp.py
src/gaze_mouse/vision/: __init__.py  eye_crop.py
